# elm-compiler

./: .gitignore  NOTES.md  README.md  elm.cabal
compiler/src/AST/: Json.hs
compiler/src/AST/Pretty/: Json.hs  Raw.hs
compiler/src/Reporting/: Doc.hs
terminal/impl/: Terminal.hs
terminal/impl/Terminal/: Chomp.hs
terminal/src/: Main.hs  Make.hs
test-files/: inc.elm
test-files/program1/: index.html  make_debug.txt  pretty_debug.txt
test-files/program1/src/: Main.elm
